# etfstrategy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  query_stock_prices.py  requirements-dev.txt  requirements.txt  stock_db.py  sync_etf_holdings.py  sync_etf_signal.py
archive/: README.md
config/: backtest_standard.example.yaml  broad_momentum_tv.yaml  execution.yaml  factor_validation.yaml  investment_policy.example.yaml  order.yaml  portfolio_books.example.yaml  regime.yaml  research.yaml  strategies.yaml  strategy.yaml  vcp_funnel.yaml  vcp_strategy_calibrated.yaml  vcp_tm_calibrated.yaml  vcp_tw_calibrated.yaml  vcp_tw_cases.yaml  vcp_us_calibrated.yaml  vcp_us_cases.yaml
docs/: 00981a-copytrade-research-methodology.md  00981a-retired-research.md  PRD.md  README.md  architecture.md  cloud-sync-plan.md  daily-operations.md  evaluation-contract.md  execution-eval-PRD.md  homepage-copy-backend-plan.md  intraday-exit-playbook.md  manual_events.example.json  readdy-regime-strategy-lineage.md  readdy-stock-intelligence-spec.txt  readdy-view-ready-migration.md  signal-review-PRD.md  src-map.md  terminology-audit.md  terminology.md  unified-backtest-standard.md  修改計畫書.md  修改計畫書.txt
launchd/: com.jackm4.etf.etfedge-import.plist.template  com.jackm4.etf.evening-holdings.plist.template  com.jackm4.etf.execution-eval.plist.template  com.jackm4.etf.mutual-fund-disclosure-watch.plist.template  com.jackm4.etf.order-chase-open.plist.template  com.jackm4.etf.order-wake.plist.template  com.jackm4.etf.rrg-c18acc-poll.plist.template  (+4 more)
reports/: README.md
(+678 files in other folders)
