[project]
name = "etf-holdings-research"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
    "src/research/archive",
    "src/research/backtest",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/research/archive/*",
    "src/research/backtest/*",
    # CLI sync / backfill entry points (daily_sync.sh; not unit-tested)
    "src/sync_*.py",
    "src/backfill_*.py",
    "src/rrg_mono_intraday_watch.py",
    "src/vcp_intraday_watch.py",
    "src/vcp_tm/calculators/forward_outcome.py",
    "src/vcp_tm/tw_data_adapter.py",
]

[tool.coverage.report]
fail_under = 55
show_missing = false
skip_empty = true
